# SIMPEngine

./: .gitignore  CMakeLists.txt  Changes.txt  GAME_GUIDE.md  README.md  TODOs.txt  WhatTheHell.txt  compile_commands.json  file.sh  imgui.ini  installDependencies.sh  main.cpp  run.sh  tasks
.cache/clangd/index/: Animation.h.403430B7134B8B6D.idx  AnimationSystem.h.D3183B474DD85875.idx  BVH.h.CA359A4857C6B151.idx  Camera2D.h.4C3297425EA1B0B6.idx  CameraSystem.h.A9F55B5CA4176C2B.idx  CollisionSystem.h.0FE98255F89513A4.idx  Component.h.F5CE8831BAB7B19C.idx  Entity.h.C1D9EBBDBA704C63.idx  Event.h.73D07CCE906A8E80.idx  ForceGenerator.h.2E880F016B75A6F7.idx  ForceRegistry.h.5F0047AD53FB1F78.idx  HierarchySystem.h.DBC928A4EA4376E3.idx  ImGuiSink.h.7A35EC2A908A373B.idx  LifetimeSystem.h.AF7EBBFC184B0493.idx  Log.h.AC52D11AEB224F5B.idx  MovementSystem.h.2CCB2384590243CD.idx  PhysicsSystem.h.45D0355719E00F14.idx  RenderSystem.h.B11ECB5C7A21F205.idx  Renderer.h.E2A811B890E9A7F2.idx  RenderingAPI.h.BED5E9CB5010E694.idx  SDL.h.1F43329CC260D509.idx  SDL_assert.h.D72133870C395CEC.idx  SDL_asyncio.h.42E24E1328BFBED4.idx  SDL_atomic.h.5B2401DC941FBE3F.idx  SDL_audio.h.6985931983C0E5B6.idx  SDL_begin_code.h.5A5A619A1C2AA017.idx  SDL_bits.h.728C9AF5138999EE.idx  SDL_blendmode.h.89F30D50EAFD885D.idx  SDL_camera.h.CF1647AC3B430684.idx  SDL_clipboard.h.2224D88CC1F0AE40.idx  (+445 more)
Editor/: CMakeLists.txt  EditorCommands.cpp  EditorCommands.h  EditorContext.h  EditorLayer.cpp  EditorLayer.h  icons.h
Editor/Panels/: AssetPickerPanel.cpp  AssetPickerPanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorPanel.h  EditorUtility.h  GizmoSystem.cpp  GizmoSystem.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  PlayerController.h  SpriteSection.cpp  ViewportPanel.cpp  ViewportPanel.h  ViewportUtility.cpp
Editor/Panels/InspectorPanel/: AnimationMakerPanel.cpp  AnimationMakerPanel.h  AnimationSection.cpp  InspectorPanel.cpp  InspectorPanel.h  PhysicsSection.cpp
Editor/icons/: folder_icon.h
Engine/: CMakeLists.txt
Engine/Engine/: ImGuiSink.h  Log.cpp  PCH.h  SIMPEngine.h  Window.cpp
Engine/Engine/Application/: Application.cpp  Application.h
Engine/Engine/Assets/: Asset.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  Importers.cpp  Importers.h  TextureImporter.cpp  TextureImporter.h
Engine/Engine/Core/: EngineDimensions.cpp  EngineDimensions.h  FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  Profiler.cpp  Profiler.h  ProfilingUtils.h  TracyProfiler.cpp  TracyProfiler.h  VFS.cpp  VFS.h  Window.cpp  Window.h
Engine/Engine/Core/Profiler/: EngineProfiler.h
Engine/Engine/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
Engine/Engine/Input/: Input.cpp  Input.h  SIMP_Keys.h
Engine/Engine/Layer/: Layer.h  LayerStack.h  RenderingLayer.cpp  RenderingLayer.h
Engine/Engine/Math/: Camera2D.cpp  Camera2D.h  EntityUtility.cpp  EntityUtility.h
Engine/Engine/Rendering/: Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  GLRenderingAPI.cpp  GLRenderingAPI.h  Renderer.cpp  Renderer.h  RenderingAPI.cpp  RenderingAPI.h  SDLRenderingAPI.cpp  SDLRenderingAPI.h  SVGDocument.cpp  SVGDocument.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteAtlas.cpp  SpriteAtlas.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Tileset.cpp  Tileset.h
Engine/Engine/Rendering/Shaders/: LineShader.h  ShapeShader.h  SpriteShader.h  sprite.frag
Engine/Engine/Scene/: Component.h  Entity-inl.h  Entity.h  Scene.cpp  Scene.h  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h  TilemapUtils.h
Engine/Engine/Scene/Loaders/: TiledLoader.cpp  TiledLoader.h
Engine/Engine/Scene/Systems/: AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.h  HierarchySystem.h  LifetimeSystem.h  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  TilemapSystem.cpp  TilemapSystem.h
Engine/Engine/UI/: ImGuiLayer.cpp  ImGuiLayer.h  style.h
Game/: CMakeLists.txt  ConstellationScript.h  EditorLayer.cpp  EditorLayer.h  RenderingLayer.h  TestScene.cpp  ballScript.h  leftPlayerMoveScript.h  main.cpp  moveScript.h  rightPlayerMoveScript.h
Game/Panels/: HierarchyPanel.cpp  HierarchyPanel.h  ViewportPanel.cpp
SIMPEngine/: SIMPEngine.md
SIMPEngine/.obsidian/: workspace.json
assets copy/: registry.asset
assets/ImGUIPanels/: imgui.ini
assets/scenes/: Level1.yaml  Level2.yaml
assets/textures/: Grass.json  grass.tiled-session  map.json
docs/: API_GUIDE.md  ARCHITECTURE.md  COMPONENTS.md  GETTING_STARTED.md  INDEX.md  QUICK_REFERENCE.md  RENDERING_GUIDE.md
engine/: CMakeLists.txt
engine/Engine/: ImGuiSink.h  Log.cpp  Log.h  PCH.h  Window.cpp  Window.h
engine/Engine/Application/: Application.cpp  Application.h
engine/Engine/Events/: ApplicationEvent.h
engine/Engine/Input/: Input.cpp  Input.h
engine/Engine/Layer/: Layer.h  RenderingLayer.cpp  RenderingLayer.h
engine/Engine/Math/: Camera2D.cpp  Camera2D.h
engine/Engine/Rendering/: Animation.cpp  Animation.h  Renderer.cpp  Renderer.h  RenderingAPI.h  SDLRenderingAPI.cpp  SDLRenderingAPI.h  Sprite.cpp  Sprite.h  SpriteAtlas.cpp  Texture.cpp  Texture.h  TextureManager.cpp
engine/Engine/Scene/: Component.h  Entity.h  Scene.cpp  Scene.h  SceneManager.h
engine/Engine/Scene/Components/: CollisionComponent.h  SpriteComponent.h  TagComponent.h  TransformComponent.h  VelocityComponent.h
engine/Engine/UI/: ImGuiLayer.cpp  ImGuiLayer.h
engine/include/Engine/: Application.h  ImGuiLayer.h  Input.h  Layer.h  LayerStack.h  Log.h  Renderer.h  RenderingAPI.h  RenderingLayer.h  SDLRenderingAPI.h  TimeStep.h  Window.h
engine/include/Engine/Events/: Event.h  KeyEvent.h  MouseEvent.h
engine/src/: Application.cpp  ImGuiLayer.cpp  Input.cpp  Log.cpp  Renderer.cpp  RenderingAPI.cpp  RenderingLayer.cpp  SDLRenderingAPI.cpp  Window.cpp
game/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  main.cpp
game/Panels/: ViewportPanel.cpp  ViewportPanel.h
game/src/: main.cpp
